--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -75,5 +75,9 @@
       {% include imp %}
     {% endfor %}
     {%include "components/lucideIcons.njk"%}
+    <footer>
+      <p>Author: Afni Ahmed</p>
+      <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+    </footer>
     </body>
   </html>
