--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -92,5 +92,9 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       {% include imp %}
     {% endfor %}
     {%include "components/lucideIcons.njk"%}
+    <footer>
+      <p>Author: Afni Ahmed</p>
+      <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+    </footer>
   </body>
 </html>
