--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -9,6 +9,16 @@
     {% for imp in dynamics.index.head %}
       {% include imp %}
     {% endfor %}
+    <style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+  </style>
   </head>
   <body class="theme-{{meta.baseTheme}} markdown-preview-view markdown-rendered markdown-preview-section {{meta.bodyClasses}}">
     {%include "components/notegrowthhistory.njk"%}
@@ -75,9 +85,9 @@
       {% include imp %}
     {% endfor %}
     {%include "components/lucideIcons.njk"%}
-    <footer>
-      <p>Author: Afni Ahmed</p>
-      <p><a href="mailto:hege@example.com">hege@example.com</a></p>
-    </footer>
+    <div class="footer">
+      <p align='center'>Author: Afni Ahmed</p>
+      <p align='center'><a href="mailto:hege@example.com">hege@example.com</a></p>
+    </div>
     </body>
   </html>
