--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -103,8 +103,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     {% endfor %}
     {%include "components/lucideIcons.njk"%}
    <div class="footer">
-      <p align='center'>Author: Afni Ahmed</p>
-      <p align='center'><a href="mailto:hege@example.com">hege@example.com</a></p>
+      <p align='center'>Maintained by Afni Ahmed</p>
     </div>
   </body>
 </html>
