--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -86,8 +86,7 @@
     {% endfor %}
     {%include "components/lucideIcons.njk"%}
     <div class="footer">
-      <p align='center'>Author: Afni Ahmed</p>
-      <p align='center'><a href="mailto:hege@example.com">hege@example.com</a></p>
+      <p align='center'>Maintained by Afni Ahmed</p>
     </div>
     </body>
   </html>
