--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -16,7 +16,7 @@
   bottom: 0;
   width: 100%;
   color: white;
-  text-align: center;
+  text-align: right;
 }
   </style>
   </head>
@@ -86,7 +86,7 @@
     {% endfor %}
     {%include "components/lucideIcons.njk"%}
     <div class="footer">
-      <p align='center'>Maintained by Afni Ahmed</p>
+      <p align='right'>Maintained by Afni Ahmed</p>
     </div>
     </body>
   </html>
