--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -16,10 +16,11 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
 .footer {
   position: fixed;
   left: 0;
+  right: 10;
   bottom: 0;
-  width: 100%;
+  width: 90%;
   color: white;
-  text-align: center;
+  text-align: right;
 }
   </style>
   </head>
@@ -103,7 +104,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     {% endfor %}
     {%include "components/lucideIcons.njk"%}
    <div class="footer">
-      <p align='center'>Maintained by Afni Ahmed</p>
+      <p align='right'>Maintained by Afni Ahmed</p>
     </div>
   </body>
 </html>
